# actix-web-template

./: .gitignore  Cargo.toml  README.md  log4rs.yaml  setting-dev.toml
src/: main.rs
src/common/: mod.rs  redis_key.rs
src/config/: arg_config.rs  mod.rs  server_config.rs
src/controller/: mod.rs  user.rs
src/db/: mod.rs
src/handler/: log_intercept.rs  mod.rs
src/macros/: mod.rs
src/model/: mod.rs
src/model/dto/: auth.rs  mod.rs
src/model/entity/: user.rs
src/model/error/: mod.rs
src/model/param/: mod.rs  user_param.rs
src/model/vo/: mod.rs  user.rs
src/service/: user_service.rs
src/utils/: date_util.rs  jwt.rs  mod.rs  redis_util.rs
