[package]
name = "actix-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.2.1"
log = "0.4.8"
log4rs = "1.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
toml = "0.5"
envconfig = "0.10.0"
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-mysql = {version="0.1"}
futures-util = "0.3.25"
jsonwebtoken = "8.1.1"
chrono = "0.4.19"
thiserror = "1" # 错误定义和处理
redis = "0.22.1"


